--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
     rel="stylesheet">
   <title>Frontend Mentor | Stats preview card component</title>
+  <style>
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
 
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
+  </style>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 
